<!-- Tanvi Prashant Magdum -->
<!-- Assignment 01-->

<resources>
    <string name="app_name">CS5520_InClass_tanvi8146</string>
    <string name="btnPractice">Practice</string>
    <string name="btn_InClass_01">InClass 01</string>
    <string name="Body_Mass_Index">Body Mass Index (BMI)</string>
    <string name="lblWeight">Weight</string>
    <string name="hintWeight">Your weight in pounds</string>
    <string name="lblPound">lb</string>
    <string name="lblHeight">Height</string>
    <string name="hintHeightFt">feet</string>
    <string name="lblFeet">feet</string>
    <string name="hintHeightIn">inches</string>
    <string name="lblInches">inches</string>
    <string name="btnBMI">Calculate BMI</string>
    <string name="msgBMI">Click on Calculate BMI to find your BMI</string>
    <string name="btn_InClass_02">InClass 02</string>
    <string name="txtName">Name</string>
    <string name="hintName">Name</string>
    <string name="hintEmail">Email</string>
    <string name="lblIUse">I use</string>
    <string name="radioAndroid">Android</string>
    <string name="radioiOS">iOS</string>
    <string name="lblMood">Your current mood:</string>
    <string name="btnSubmit">Submit</string>
    <string name="lblAvatar">Select your Avatar</string>
    <string name="txtMood">Angry</string>
    <string name="lblDisplayName">Name:</string>
    <string name="lblDisplayEmail">Email:</string>
    <string name="lblDisplayIUse">I use </string>
    <string name="lblDisplayIUse2">!</string>
    <string name="lblDisplayMood">I am </string>
    <string name="lblDisplayMood2">!</string>
    <string name="inclass03">InClass 03</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hintFragName">Name</string>
    <string name="txtFragEmail">Email</string>
    <string name="lblFragIUse">I use</string>
    <string name="radioFragAndroid">Android</string>
    <string name="radioFragiOS">iOS</string>
    <string name="lblFragMood">Your current mood:</string>
    <string name="txtFragMood">Angry</string>
    <string name="btnFragSubmit">Submit</string>
    <string name="lblFragAvatar">Select your Avatar</string>
    <string name="lblFragDisplayName">Name:</string>
    <string name="lblFragDisplayEmail">Email:</string>
    <string name="lblFragDisplayIUse">I use</string>
    <string name="lblFragDisplayIUse2">!</string>
    <string name="lblFragDisplayMood">I am</string>
    <string name="lblFragDisplayMood2">!</string>
    <string name="btn_InClass_04">InClass 04</string>
    <string name="lblComplexity">Select Complexity:</string>
    <string name="lblTimes">times</string>
    <string name="lblMinimum">Minimum:</string>
    <string name="lblMaximum">Maximum:</string>
    <string name="lblAverage">Average:</string>
    <string name="btnGenerateNumber">Generate Number</string>
    <string name="txtComplexity">0</string>
    <string name="btn_InClass_05">InClass 05</string>
    <string name="hintImageSearch">Search Keyword</string>
    <string name="btnGo">GO</string>
    <string name="btn_InClass_06">InClass 06</string>
    <string name="btnGetNews">Get News</string>
    <string name="category_spinner_label">Select Category</string>
    <string name="country_spinner_label">Select Country</string>
    <string name="txtNewsHeader">Times Today</string>
    <string name="btn_InClass_07">InClass 07</string>
    <string name="btnLogin">Log In</string>
    <string name="btnSignUp">Sign Up</string>
    <string name="lblLoginUsername">Username</string>
    <string name="hintLoginUsername">Type your Username</string>
    <string name="lblLoginPassword">Password</string>
    <string name="hintLoginPassword">Type your Password</string>
    <string name="lblSignUpName">Name</string>
    <string name="hintSignUpName">Type your Name</string>
    <string name="lblSignUpEmail">Email</string>
    <string name="hintSignUpEmail">Type your Email</string>
    <string name="lblSignUpEmailNote">(This will be your username)</string>
    <string name="lblSignUpPassword">Password</string>
    <string name="hintSignUpPassword">Type your Password</string>
    <string name="btnLoginLogin">Log In</string>
    <string name="btnSignUpSignUp">Sign Up</string>
    <string name="btnNoteDelete">Delete</string>
    <string name="hintAddEditNote">Type Note</string>
    <string name="btnAddNote">Add Note</string>
    <string name="txtAddEditNoteId">Type ID</string>
    <string name="enteremail">Email</string>
    <string name="btnNotesProfile">Profile</string>
    <string name="btnNotesLogout">Log Out</string>
    <string name="lblNotesProfile">Profile</string>
    <string name="lblNotesProfileName">Name</string>
    <string name="lblNotesProfileEmail">Email</string>
    <string name="lblNotesProfilePassword">Password</string>
    <string name="user_id">User id</string>
    <string name="lblFirebaseLoginUsername">Username</string>
    <string name="hintFirebaseLoginUsername">Type Registered Email</string>
    <string name="lblFirebaseLoginPwd">Password</string>
    <string name="hintFirebaseLoginPwd">Type Password</string>
    <string name="btnFirebaseLogin">Login</string>
    <string name="lblFirebaseLoginNote">Don\'t have an account?</string>
    <string name="btnFirebaseLoginRegister">Register</string>
    <string name="lblFirebaseRegisterFName">First Name</string>
    <string name="hintFirebaseRegisterFName">Type First Name</string>
    <string name="lblFirebaseRegisterLName">Last Name</string>
    <string name="hintFirebaseRegisterLName">Type Last Name</string>
    <string name="lblFirebaseRegisterDisplayName">Display Name</string>
    <string name="hintFirebaseRegisterDisplayName">Type Display Name</string>
    <string name="lblFirebaseRegisterEmail">Email</string>
    <string name="hintFirebaseRegisterEmail">Type Email</string>
    <string name="lblFirebaseRegisterPwd">Password</string>
    <string name="hintFirebaseRegisterPwd">Type Password</string>
    <string name="lblFirebaseRegisterRePwd">Re-enter Password</string>
    <string name="hintFirebaseRegisterRePwd">Re-type Password</string>
    <string name="btnFirebaseRegister">Register</string>
    <string name="btn_InClass_08">InClass 08</string>
    <string name="contentDesProfileImage">Select Photo</string>
    <string name="btnFirebaseEditProfile">Edit Profile</string>
    <string name="lblFirebaseProfileFName">First Name</string>
    <string name="hintFirebaseProfileFName">Edit first name</string>
    <string name="lblFirebaseProfileLName">Last Name</string>
    <string name="hintFirebaseProfileLName">Edit last name</string>
    <string name="lblFirebaseProfileEmail">Email</string>
    <string name="btnFirebaseSaveProfile">Save Profile</string>
</resources>