<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/lblLoginUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="100dp"
        android:text="@string/lblLoginUsername"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lblLoginPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/lblLoginPassword"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/txtLoginUsername"
        app:layout_constraintTop_toBottomOf="@+id/txtLoginUsername" />

    <EditText
        android:id="@+id/txtLoginUsername"
        android:layout_width="260dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/hintLoginUsername"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="@+id/lblLoginUsername"
        app:layout_constraintTop_toBottomOf="@+id/lblLoginUsername" />

    <EditText
        android:id="@+id/txtLoginPassword"
        android:layout_width="260dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/hintLoginPassword"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="@+id/lblLoginPassword"
        app:layout_constraintTop_toBottomOf="@+id/lblLoginPassword" />

    <Button
        android:id="@+id/btnLoginLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/btnLoginLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtLoginPassword" />
</androidx.constraintlayout.widget.ConstraintLayout>